--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,19 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css?family=News+Cycle&display=swap");
-:root {
-  font-size: 20px;
+@font-face {
+  font-family: 'Hubot Sans';
+  src:
+    url('/fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
+    url('/fonts/Hubot-Sans.woff2') format('woff2-variations');
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
 }
 
-html,
+@font-face {
+  font-family: 'BioWeapon';
+  src: url('/fonts/BIOWEAPON.woff2') format('woff2');
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
+
+@font-face {
+  font-family: 'Lombok';
+  src: url('/fonts/Lombok.woff2') format('woff2');
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
+
+html, 
 body {
+  font-family: 'Hubot Sans', sans-serif;
+  @apply text-white;
+  scroll-behavior: smooth;
+  overflow: overlay;
   margin: 0;
   padding: 0;
   background: #070712;
-  color: #606063;
+  color: #9c9c9c;
   overflow: hidden;
-  font-family: "News Cycle", sans-serif;
 }
 
 main {
@@ -28,7 +49,80 @@ canvas,
   z-index: 1;
 }
 
-.loading {
-  padding: 10px;
-  transform: translate3d(-50%, -50%, 0);
+.bioweapon-font {
+  font-family: 'BioWeapon';
+  position: relative;
+}
+
+.bioweapon-font.entropic::before, 
+.bioweapon-font.entropic::after, 
+.bioweapon-font.entropic > .font-mirror-layer::before {
+  content: 'ENTROPIC';
+  position: absolute;
+  color: transparent;
+  width: 100%;
+  height: 100%;
+}
+
+.bioweapon-font.software::before, 
+.bioweapon-font.software::after, 
+.bioweapon-font.software > .font-mirror-layer::before {
+  content: 'SOFTWARE';
+  position: absolute;
+  color: transparent;
+  width: 100%;
+  height: 100%;
+}
+
+.bioweapon-font.error-404::before, 
+.bioweapon-font.error-404::after, 
+.bioweapon-font.error-404 > .font-mirror-layer::before {
+  content: '404';
+  position: absolute;
+  color: transparent;
+  width: 100%;
+  height: 100%;
+}
+
+.bioweapon-font.error-500::before, 
+.bioweapon-font.error-500::after, 
+.bioweapon-font.error-500 > .font-mirror-layer::before {
+  content: '500';
+  position: absolute;
+  color: transparent;
+  width: 100%;
+  height: 100%;
+}
+
+.bioweapon-font::before {
+  --bottom: -0.2rem;
+  --left: -0.2rem;
+  bottom: var(--bottom);
+  left: var(--left);
+  z-index: -1;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #fc034e;
+  opacity: 0.5;
+}
+
+.bioweapon-font::after {
+  --bottom: -0.4rem;
+  --left: -0.4rem;
+  bottom: var(--bottom);
+  left: var(--left);
+  z-index: -2;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #fc034e;
+  opacity: 0.4;
+}
+
+.bioweapon-font > .font-mirror-layer::before {
+  --bottom: -0.6rem;
+  --left: -0.6rem;
+  bottom: var(--bottom);
+  left: var(--left);
+  z-index: -1;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #fc034e;
+  opacity: 0.3;
 }
