--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,13 +18,6 @@
   font-stretch: 75% 125%;
 }
 
-@font-face {
-  font-family: 'Lombok';
-  src: url('/fonts/Lombok.woff2') format('woff2');
-  font-weight: 200 900;
-  font-stretch: 75% 125%;
-}
-
 html, 
 body {
   font-family: 'Hubot Sans', sans-serif;
@@ -35,7 +28,27 @@ body {
   padding: 0;
   background: #070712;
   color: #9c9c9c;
-  overflow: hidden;
+}
+
+*::-webkit-scrollbar {
+  font-size: 18px;
+  width: 0.4rem;
+  height: 0.4rem;
+  margin-right: 0.25rem;
+  @apply bg-scrollbar-bg;
+}
+
+*::-webkit-scrollbar-thumb {
+  margin: 10px;
+  width: 10px;
+  height: 10px;
+  position: relative;
+  right: 6px;
+  @apply bg-scrollbar-thumb-bg;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  @apply bg-scrollbar-thumb-hover;
 }
 
 main {
