--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,24 +3,17 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Hubot Sans';
+  font-family: 'Montserrat';
   src:
-    url('/fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
-    url('/fonts/Hubot-Sans.woff2') format('woff2-variations');
-  font-weight: 200 900;
-  font-stretch: 75% 125%;
-}
-
-@font-face {
-  font-family: 'BioWeapon';
-  src: url('/fonts/BIOWEAPON.woff2') format('woff2');
+    url('/fonts/Montserrat.woff2') format('woff2 supports variations'),
+    url('/fonts/Montserrat.woff2') format('woff2-variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
 }
 
 html, 
 body {
-  font-family: 'Hubot Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   @apply text-white;
   scroll-behavior: smooth;
   overflow: overlay;
@@ -60,82 +53,4 @@ main {
 canvas,
 .canvas > div {
   z-index: 1;
-}
-
-.bioweapon-font {
-  font-family: 'BioWeapon';
-  position: relative;
-}
-
-.bioweapon-font.entropic::before, 
-.bioweapon-font.entropic::after, 
-.bioweapon-font.entropic > .font-mirror-layer::before {
-  content: 'ENTROPIC';
-  position: absolute;
-  color: transparent;
-  width: 100%;
-  height: 100%;
-}
-
-.bioweapon-font.software::before, 
-.bioweapon-font.software::after, 
-.bioweapon-font.software > .font-mirror-layer::before {
-  content: 'SOFTWARE';
-  position: absolute;
-  color: transparent;
-  width: 100%;
-  height: 100%;
-}
-
-.bioweapon-font.error-404::before, 
-.bioweapon-font.error-404::after, 
-.bioweapon-font.error-404 > .font-mirror-layer::before {
-  content: '404';
-  position: absolute;
-  color: transparent;
-  width: 100%;
-  height: 100%;
-}
-
-.bioweapon-font.error-500::before, 
-.bioweapon-font.error-500::after, 
-.bioweapon-font.error-500 > .font-mirror-layer::before {
-  content: '500';
-  position: absolute;
-  color: transparent;
-  width: 100%;
-  height: 100%;
-}
-
-.bioweapon-font::before {
-  --bottom: -0.2rem;
-  --left: -0.2rem;
-  bottom: var(--bottom);
-  left: var(--left);
-  z-index: -1;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #fc034e;
-  opacity: 0.5;
-}
-
-.bioweapon-font::after {
-  --bottom: -0.4rem;
-  --left: -0.4rem;
-  bottom: var(--bottom);
-  left: var(--left);
-  z-index: -2;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #fc034e;
-  opacity: 0.4;
-}
-
-.bioweapon-font > .font-mirror-layer::before {
-  --bottom: -0.6rem;
-  --left: -0.6rem;
-  bottom: var(--bottom);
-  left: var(--left);
-  z-index: -1;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #fc034e;
-  opacity: 0.3;
 }
